# genji-bot

./: .gitignore  README.md  mise.toml  pyproject.toml
script/: header.py
src/: cfg.py  main.py
src/module/: baka.py  bite.py  bleh.py  blush.py  bonk.py  catpx.py  clap.py  confused.py  cuddle.py  did.py  direct.py  dogpx.py  facts.py  feed.py  gei.py  help.py  highfive.py  hug.py  jokes.py  kick.py  kiss.py  laugh.py  lurk.py  magisk.py  msg.py  nod.py  nom.py  nope.py  nya.py  pat.py  peck.py  plantpx.py  poke.py  punch.py  quotes.py  riddle.py  sexy.py  shoot.py  shrug.py  slap.py  (+12 more)
src/util/: client.py  fetch.py  flood.py  handler.py  help.py  logging.py  module.py  rw.py
