[project]
name = "genji"
version = "0.1.0"
description = "A telegram bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=22.8",
    "pytz>=2026.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "I",
    "UP",
    "B"
]
