[project]
name = "genji"
version = "0.1.0"
license = "GPL-3.0-only"
description = "A telegram bot"
license-files = [
    "LICENSE",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "httpx[http2]>=0.28.1",
    "orjson>=3.11.9",
    "python-telegram-bot[http2,rate-limiter]>=22.8",
    "pytz>=2026.2",
]

[dependency-groups]
dev = [
    "jurigged>=0.6.1",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = [
    "E",
    "I",
    "UP",
    "B"
]
